# insta-clone-backend

./: .gitignore  =  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_auto_20200706_1522.py  0002_auto_20200706_2005.py  0002_auto_20200708_1732.py  0002_auto_20200708_2017.py  0003_author_following.py  0003_auto_20200708_2128.py
authentication/templates/: 404.html  500.html  add_comment_to_post.html  all_tags.html  all_users.html  base.html  edit_profile.html  index.html  login.html  logout.html  post_detail.html  profile.html  register.html  search.html  tag_list.html
comments/: admin.py  forms.py  models.py  views.py
comments/migrations/: 0001_initial.py  0002_auto_20200715_1626.py
insta_backend/: admin.py  apps.py  helpers.py  models.py  urls.py  views.py
insta_backend/migrations/: 0001_initial.py  0002_auto_20200707_1815.py  0002_post_likes.py  0003_auto_20200707_1823.py  0004_auto_20200708_2014.py
insta_backend/templates/: post_form.html
instagram_clone/: ..env.icloud  .env 2  settings.py  urls.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_notification_post.py  0003_auto_20200720_1407.py  0004_auto_20200720_1408.py  0005_notification_seen.py  0006_auto_20200721_1722.py  0007_auto_20200721_1725.py  0008_auto_20200721_1726.py  (+1 more)
tags/: .admin.py.icloud  .models.py.icloud  .urls.py.icloud  .views.py.icloud  admin.py  models.py  urls.py  views.py
(+10 files in other folders)
