[tool.poetry]
name = "insta-clone-backend"
version = "0.1.0"
description = ""
authors = ["Darveloper <darveloper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
